--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Шапка -->
     <header class="header">
-      <nav class="header__main-nav main-nav">
+      <nav class="header__main-nav main-nav main-nav--closed">
         <div class="main-nav__wrapper">
           <div class="main-nav__logo-wrapper">
             <a class="main-nav__logo" href="index.html">
