--- a/src/index.html
+++ b/src/index.html
@@ -11,41 +11,43 @@
     <header class="header">
       <nav class="header__main-nav main-nav main-nav--closed">
         <div class="main-nav__wrapper">
-          <div class="main-nav__logo-wrapper">
-            <a class="main-nav__logo" href="index.html">
-              <picture>
-                <source
-                  srcset="img/cat-energy-logo-tablet.svg"
-                  width="174"
-                  height="52"
-                  media="(min-width: 769px) and (max-width: 1439px)"
-                />
-                <source
-                  srcset="img/cat-energy-logo-desktop.svg"
-                  width="202"
-                  height="59"
-                  media="(min-width: 1440px)"
-                />
+          <div class="main-nav__mobile-wrapper">
+            <div class="main-nav__logo-wrapper">
+              <a class="main-nav__logo" href="index.html">
+                <picture>
+                  <source
+                    srcset="img/cat-energy-logo-tablet.svg"
+                    width="174"
+                    height="52"
+                    media="(min-width: 769px) and (max-width: 1439px)"
+                  />
+                  <source
+                    srcset="img/cat-energy-logo-desktop.svg"
+                    width="202"
+                    height="59"
+                    media="(min-width: 1440px)"
+                  />
+                  <img
+                    src="img/cat-energy-icon-mobile.svg"
+                    width="33"
+                    height="38"
+                    alt="Кэт энерджи"
+                  />
+                </picture>
+              </a>
+              <a class="main-nav__logo" href="index.html">
                 <img
-                  src="img/cat-energy-icon-mobile.svg"
-                  width="33"
-                  height="38"
+                  src="img/cat-energy-name-mobile.svg"
+                  width="101"
+                  height="18"
                   alt="Кэт энерджи"
                 />
-              </picture>
-            </a>
-            <a class="main-nav__logo" href="index.html">
-              <img
-                src="img/cat-energy-name-mobile.svg"
-                width="101"
-                height="18"
-                alt="Кэт энерджи"
-              />
-            </a>
+              </a>
+            </div>
+            <button class="main-nav__toggle" type="button">
+              <span class="visually-hidden">Открыть меню</span>
+            </button>
           </div>
-          <button class="main-nav__toggle" type="button">
-            <span class="visually-hidden">Открыть меню</span>
-          </button>
 
           <ul class="main-nav__nav-list nav-list">
             <li class="nav-list__item nav-list__item--current">
