Добавил js, не получилось взаимодействовать с кнопкой

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Шапка -->
     <header class="header">
-      <nav class="header__main-nav main-nav main-nav--closed">
+      <nav class="header__main-nav main-nav main-nav--opened main-nav--nojs">
         <div class="main-nav__wrapper">
           <div class="main-nav__mobile-wrapper">
             <div class="main-nav__logo-wrapper">
@@ -483,5 +483,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
