Стилизовал 2 блока в видах программ

--- a/src/index.html
+++ b/src/index.html
@@ -100,30 +100,32 @@
           <div
             class="program-types__diet-type diet-type diet-type--lose-weight"
           >
-            <div class="diet-type__icon diet-type-icon">
-              <picture>
-                <source
-                  srcset="img/lose-weight-cat-tablet.svg"
-                  width="140"
-                  height="194"
-                  media="(min-width: 769px) and (max-width: 1439px)"
-                />
-                <source
-                  srcset="img/lose-weight-cat-desktop.svg"
-                  width="70"
-                  height="97"
-                  media="(min-width: 1440px)"
-                />
-                <img
-                  class="diet-type-icon__image"
-                  src="img/lose-weight-cat-mobile.svg"
-                  width="36"
-                  height="50"
-                  alt="кот в программе для похудения"
-                />
-              </picture>
+            <div class="diet-type__wrapper-title">
+              <div class="diet-type__icon diet-type-icon">
+                <picture class="diet-type__icons">
+                  <source
+                    srcset="img/lose-weight-cat-tablet.svg"
+                    width="140"
+                    height="194"
+                    media="(min-width: 769px) and (max-width: 1439px)"
+                  />
+                  <source
+                    srcset="img/lose-weight-cat-desktop.svg"
+                    width="70"
+                    height="97"
+                    media="(min-width: 1440px)"
+                  />
+                  <img
+                    class="diet-type-icon__image"
+                    src="img/lose-weight-cat-mobile.svg"
+                    width="36"
+                    height="50"
+                    alt="кот в программе для похудения"
+                  />
+                </picture>
+              </div>
+              <h2 class="diet-type__title">Похудение</h2>
             </div>
-            <h2 class="diet-type__title">Похудение</h2>
             <p class="diet-type__description">
               Ваш кот весит больше собаки и почти утратил способность лазить по
               деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
@@ -150,30 +152,32 @@
           <div
             class="program-types__gain-type gain-type gain-type--weight-gain"
           >
-            <div class="gain-type__icon gain-type-icon">
-              <picture>
-                <source
-                  srcset="img/weight-gain-cat-tablet.svg"
-                  width="268"
-                  height="112"
-                  media="(min-width: 769px) and (max-width: 1439px)"
-                />
-                <source
-                  srcset="img/weight-gain-cat-desktop.svg"
-                  width="134"
-                  height="57"
-                  media="(min-width: 1440px)"
-                />
-                <img
-                  class="gain-type-icon__image"
-                  src="img/weight-gain-cat-mobile.svg"
-                  width="67"
-                  height="28"
-                  alt="кот в программе для похудения"
-                />
-              </picture>
+            <div class="gain-type__wrapper-title">
+              <div class="gain-type__icon gain-type-icon">
+                <picture class="gain-type__icons">
+                  <source
+                    srcset="img/weight-gain-cat-tablet.svg"
+                    width="268"
+                    height="112"
+                    media="(min-width: 769px) and (max-width: 1439px)"
+                  />
+                  <source
+                    srcset="img/weight-gain-cat-desktop.svg"
+                    width="134"
+                    height="57"
+                    media="(min-width: 1440px)"
+                  />
+                  <img
+                    class="gain-type-icon__image"
+                    src="img/weight-gain-cat-mobile.svg"
+                    width="67"
+                    height="28"
+                    alt="кот в программе для похудения"
+                  />
+                </picture>
+              </div>
+              <h2 class="gain-type__title">Набор массы</h2>
             </div>
-            <h2 class="gain-type__title">Набор массы</h2>
             <p class="gain-type__description">
               Заработать авторитет среди дворовых котов и даже собак? Серия Cat
               Energy Pro поможет вашему коту нарастить необходимые мышцы!
