--- a/src/index.html
+++ b/src/index.html
@@ -116,7 +116,7 @@
                     media="(min-width: 1440px)"
                   />
                   <img
-                    class="diet-type-icon__image"
+                    class="diet-type__image"
                     src="img/lose-weight-cat-mobile.svg"
                     width="36"
                     height="50"
@@ -168,7 +168,7 @@
                     media="(min-width: 1440px)"
                   />
                   <img
-                    class="gain-type-icon__image"
+                    class="gain-type__image"
                     src="img/weight-gain-cat-mobile.svg"
                     width="67"
                     height="28"
