Стилизовал живой пример под телефоное разрешение

--- a/src/index.html
+++ b/src/index.html
@@ -335,11 +335,17 @@
               <dl class="example__list">
                 <div class="example__item">
                   <dt class="example__module-item">5 кг</dt>
-                  <dd class="example__module-description">снижение веса</dd>
+                  <dd class="example__module-description">
+                    снижение<br />
+                    веса
+                  </dd>
                 </div>
                 <div class="example__item">
                   <dt class="example__module-item">60 дней</dt>
-                  <dd class="example__module-description">затрачено времени</dd>
+                  <dd class="example__module-description">
+                    затрачено<br />
+                    времени
+                  </dd>
                 </div>
               </dl>
               <div class="example__result-wrapper">
