--- a/src/index.html
+++ b/src/index.html
@@ -396,7 +396,7 @@
           </div>
           <!-- Тут будет карта -->
           <iframe
-            class="location__map"
+            class="map location__map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8224469757427!2d30.314833977330657!3d59.968268659713594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1692994636461!5m2!1sru!2sru"
             width="600"
             height="450"
