изменил класс на gain-weight

--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
             </a>
           </div>
           <div
-            class="program-types__gain-type gain-type gain-type--weight-gain"
+            class="program-types__gain-type gain-type gain-type--gain-weight"
           >
             <div class="gain-type__wrapper-title">
               <div class="gain-type__icon gain-type-icon">
