убрал <br />, обернул каждую строку в <p>

--- a/src/index.html
+++ b/src/index.html
@@ -336,15 +336,15 @@
                 <div class="example__item">
                   <dt class="example__module-item">5 кг</dt>
                   <dd class="example__module-description">
-                    снижение<br />
-                    веса
+                    <p class="example__module-text">снижение</p>
+                    <p class="example__module-text">веса</p>
                   </dd>
                 </div>
                 <div class="example__item">
                   <dt class="example__module-item">60 дней</dt>
                   <dd class="example__module-description">
-                    затрачено<br />
-                    времени
+                    <p class="example__module-text">затрачено</p>
+                    <p class="example__module-text">времени</p>
                   </dd>
                 </div>
               </dl>
