убрал <br /> обернул каждую строку в <p>. Город сделал частью адреса

--- a/src/index.html
+++ b/src/index.html
@@ -381,16 +381,20 @@
           <div class="location__address address-description">
             <div class="address-description__wrapper">
               <h3 class="address-description__title">
-                Приглашаем<br />
-                к сотрудничеству<br />
-                дилеров!<br />
+                <p class="address-description__text">Приглашаем</p>
+                <p class="address-description__text">к сотрудничеству</p>
+                <p class="address-description__text">дилеров!</p>
               </h3>
               <div class="address-description__container">
                 <address class="address-description__address">
-                  ул. Большая <br />
-                  Конюшенная, д. 19/8
+                  <p class="address-description__address-text">ул. Большая</p>
+                  <p class="address-description__address-text">
+                    Конюшенная, д. 19/8
+                  </p>
+                  <p class="address-description__address-text">
+                    Санкт-Петербург
+                  </p>
                 </address>
-                <div class="address-description__city">Санкт-Петербург</div>
               </div>
             </div>
           </div>
