вместо <p> написал <br />

--- a/src/index.html
+++ b/src/index.html
@@ -382,9 +382,9 @@
             <div class="location__address address-description">
               <div class="address-description__wrapper">
                 <h3 class="address-description__title">
-                  <p class="address-description__text">Приглашаем</p>
-                  <p class="address-description__text">к сотрудничеству</p>
-                  <p class="address-description__text">дилеров!</p>
+                  Приглашаем<br />
+                  к сотрудничеству<br />
+                  дилеров!
                 </h3>
                 <div class="address-description__container">
                   <address class="address-description__address">
