--- a/src/index.html
+++ b/src/index.html
@@ -49,15 +49,17 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__nav-list nav-list">
             <li class="nav-list__item nav-list__item--active">
-              <a class="nav-list__link nav-list__link--active" href="index.html"
+              <a class="nav-list__link nav-list__link" href="index.html"
                 >Главная</a
               >
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">Каталог продукции</a>
+              <a class="nav-list__link" href="catalog.html"
+                >Каталог продукции</a
+              >
             </li>
             <li class="nav-list__item">
-              <a class="nav-list__link" href="#">Подбор программы</a>
+              <a class="nav-list__link" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </div>
