Сделал секцию комментария

--- a/src/form.html
+++ b/src/form.html
@@ -158,6 +158,19 @@
             </div>
           </div>
         </section>
+
+        <!-- Комментарий -->
+        <section class="comments">
+          <div class="comments__wrapper">
+            <h1 class="comments__title">Комментарий</h1>
+            <textarea
+              class="comments__textarea"
+              rows="5"
+              cols="40"
+              placeholder="Расскажите обо всех повАдках кота"
+            ></textarea>
+          </div>
+        </section>
       </form>
     </main>
   </body>
