--- a/src/catalog.html
+++ b/src/catalog.html
@@ -64,5 +64,152 @@
         </div>
       </nav>
     </header>
+
+    <!-- Главное содержание -->
+    <main class="main-container">
+      <!-- Каталог продукции -->
+      <section class="catalog">
+        <div class="catalog__wrapper">
+          <h2 class="catalog__title">Каталог продукции</h2>
+          <ul class="catalog__list">
+            <li class="catalog__item catalog-item">
+              <h3 class="catalog-item__title">Cat energy pro 500г</h3>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Масса</span>
+                <span class="catalog-item__specification">500г</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Вкус</span>
+                <span class="catalog-item__specification">Курица</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Цена</span>
+                <span class="catalog-item__specification">700 ₽</span>
+              </div>
+              <button class="catalog-item__button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <h3 class="catalog-item__title">Cat energy pro 1000 г</h3>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Масса</span>
+                <span class="catalog-item__specification">1000 г</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Вкус</span>
+                <span class="catalog-item__specification">Курица</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Цена</span>
+                <span class="catalog-item__specification">1000 ₽</span>
+              </div>
+              <button class="catalog-item__button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <h3 class="catalog-item__title">Cat energy pro 500 г</h3>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Масса</span>
+                <span class="catalog-item__specification">500 г</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Вкус</span>
+                <span class="catalog-item__specification">Рыба</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Цена</span>
+                <span class="catalog-item__specification">700 ₽</span>
+              </div>
+              <button class="catalog-item__button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <h3 class="catalog-item__title">Cat energy pro 1000 г</h3>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Масса</span>
+                <span class="catalog-item__specification">1000 г</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Вкус</span>
+                <span class="catalog-item__specification">Рыба</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Цена</span>
+                <span class="catalog-item__specification">1000 ₽</span>
+              </div>
+              <button class="catalog-item__button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <h3 class="catalog-item__title">Cat Energy slim 500 г</h3>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Масса</span>
+                <span class="catalog-item__specification">500 г</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Вкус</span>
+                <span class="catalog-item__specification">Гречка</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Цена</span>
+                <span class="catalog-item__specification">400 ₽</span>
+              </div>
+              <button class="catalog-item__button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <h3 class="catalog-item__title">Cat Energy slim 1000 г</h3>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Масса</span>
+                <span class="catalog-item__specification">1000 г</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Вкус</span>
+                <span class="catalog-item__specification">Гречка</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Цена</span>
+                <span class="catalog-item__specification">700 ₽</span>
+              </div>
+              <button class="catalog-item__button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <h3 class="catalog-item__title">Cat Energy slim 500 г</h3>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Масса</span>
+                <span class="catalog-item__specification">500 г</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Вкус</span>
+                <span class="catalog-item__specification">Рис</span>
+              </div>
+              <div class="catalog-item__specification-container">
+                <span class="catalog-item__specification">Цена</span>
+                <span class="catalog-item__specification">500 ₽</span>
+              </div>
+              <button class="catalog-item__button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="catalog__item catalog-item">
+              <h3 class="catalog-item__title">Показать еще 100500 товаров</h3>
+              <p class="catalog-item__text">
+                На самом деле вкусов гораздо больше!
+              </p>
+              <button class="catalog-item__button" type="button">
+                Показать все
+              </button>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
