Добавил секцию Дополнительные товары

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -210,6 +210,64 @@
           </ul>
         </div>
       </section>
+
+      <!-- Допонительные товары -->
+      <section class="additional-items">
+        <div class="additional-items__wrapper">
+          <h2 class="additional-items__title">Дополнительные товары</h2>
+          <ul class="additional-items__list additional-items-list">
+            <li class="additional-items-list__item">
+              <h3 class="additional-items-list__title">Сахарозаменитель</h3>
+              <div class="additional-items-list__description">
+                <span class="additional-items-list__volume"
+                  >1 упаковка (100 г)</span
+                >
+                <span class="additional-items-list__price">200 ₽</span>
+              </div>
+              <button class="additional-items-list__button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="additional-items-list__item">
+              <h3 class="additional-items-list__title">Питьевая вода</h3>
+              <div class="additional-items-list__description">
+                <span class="additional-items-list__volume">5 литров</span>
+                <span class="additional-items-list__price">50 ₽</span>
+              </div>
+              <button class="additional-items-list__button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="additional-items-list__item">
+              <h3 class="additional-items-list__title">Молоко</h3>
+              <div class="additional-items-list__description">
+                <span class="additional-items-list__volume">1 литр</span>
+                <span class="additional-items-list__price">100 ₽</span>
+              </div>
+              <button class="additional-items-list__button" type="button">
+                Заказать
+              </button>
+            </li>
+            <li class="additional-items-list__item">
+              <h3 class="additional-items-list__title">Витамины</h3>
+              <div class="additional-items-list__description">
+                <span class="additional-items-list__volume"
+                  >1 упаковка (30 г)</span
+                >
+                <span class="additional-items-list__price">300 ₽</span>
+              </div>
+              <button class="additional-items-list__button" type="button">
+                Заказать
+              </button>
+            </li>
+          </ul>
+          <div class="additional-items__gift">
+            <p class="additional-items__gift-text">
+              Закажите все и получите чехол для кота в подарок!
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
