--- a/src/catalog.html
+++ b/src/catalog.html
@@ -268,6 +268,46 @@
           </div>
         </div>
       </section>
+
+      <!-- Локация -->
+      <section class="location">
+        <div class="location__wrapper">
+          <h2 class="visually-hidden">Локация</h2>
+          <div class="location__map-contaier">
+            <div class="location__address address-description">
+              <div class="address-description__wrapper">
+                <h3 class="address-description__title">
+                  Приглашаем<br />
+                  к сотрудничеству<br />
+                  дилеров!
+                </h3>
+                <div class="address-description__container">
+                  <address class="address-description__address">
+                    <p class="address-description__address-text">ул. Большая</p>
+                    <p class="address-description__address-text">
+                      Конюшенная, д. 19/8
+                    </p>
+                    <p class="address-description__address-text">
+                      Санкт-Петербург
+                    </p>
+                  </address>
+                </div>
+              </div>
+            </div>
+            <!-- Тут будет карта -->
+            <iframe
+              class="map location__map"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1996.8224469757427!2d30.314833977330657!3d59.968268659713594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5afc31%3A0x5f2ac55f567b2400!2sHTML%20Academy!5e0!3m2!1sru!2sru!4v1692994636461!5m2!1sru!2sru"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
