--- a/src/form.html
+++ b/src/form.html
@@ -45,7 +45,7 @@
           </button>
         </div>
 
-        <div class="main-nav__wrapper">
+        <div class="main-nav__wrapper main-nav__wrapper--border">
           <ul class="main-nav__nav-list nav-list">
             <li class="nav-list__item nav-list__item">
               <a class="nav-list__link nav-list__link" href="index.html"
