--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,28 @@
     <title>Главная страница</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="main-header">
+      <a class="main-header__logo" href="#">
+        <img
+          src="./img/logo-cat-energy-icon-mobile.svg"
+          width="33"
+          height="38"
+        />
+      </a>
+      <div class="main-header__name-logo">
+        <img
+          src="./img/logo-cat-energy-name-mobile.svg"
+          width="101"
+          height="18"
+        />
+      </div>
+
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden"> Открыть меню </span>
+        </button>
+      </nav>
+    </header>
+  </body>
 </html>
