--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,22 @@
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden"> Открыть меню </span>
         </button>
+
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="site-list__item site-list__item--current">
+              <a class="site-list__link" href="index.html">Главная</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="catalog.html"
+                >Каталог продукции</a
+              >
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="form.html">Подбор программы</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
   </body>
