Приступил к главному содержимому, начал верстку программы. Затем верcтку 2 программ

--- a/src/index.html
+++ b/src/index.html
@@ -44,5 +44,47 @@
         </div>
       </nav>
     </header>
+
+    <main class="main-container">
+      <h1 class="visually-hidden">
+        "Кэт энерджи" - лучшие программы для ваших котов
+      </h1>
+
+      <section class="program">
+        <div class="program__wrapper">
+          <h2 class="program__title">Функциональное питание для котов</h2>
+          <p class="program__slogan">Занялся собой? Займись котом!</p>
+          <button class="program__link button" type="button">
+            подобрать программу
+          </button>
+        </div>
+      </section>
+
+      <section class="program-types">
+        <div class="program-types__wrapper">
+          <h2 class="visually-hidden">Виды программ</h2>
+          <div
+            class="program-types__type program-type program-type--weight-loss"
+          >
+            <h2 class="program-type__title title">Похудение</h2>
+            <p class="program-type__text">
+              Ваш кот весит больше собаки и почти утратил способность лазить по
+              деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу
+              сбросить лишний вес.
+            </p>
+            <a class="program-type__link" href="#">каталог slim</a>
+          </div>
+
+          <div class="program-types__type program-type program-type--mass-gain">
+            <h2 class="program-type__title title">Набор массы</h2>
+            <p class="program-type__text">
+              Заработать авторитет среди дворовых котов и даже собак? Серия Cat
+              Energy Pro поможет вашему коту нарастить необходимые мышцы!
+            </p>
+            <a class="program-type__link" href="#">каталог pro</a>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
