--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- Шапка -->
     <header class="main-header">
       <a class="main-header__logo" href="#">
         <img
@@ -22,6 +23,7 @@
         />
       </div>
 
+      <!-- Навигация -->
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden"> Открыть меню </span>
@@ -45,11 +47,13 @@
       </nav>
     </header>
 
+    <!-- Главное содержимое -->
     <main class="main-container">
       <h1 class="visually-hidden">
         "Кэт энерджи" - лучшие программы для ваших котов
       </h1>
 
+      <!-- Программа -->
       <section class="program">
         <div class="program__wrapper">
           <h2 class="program__title">Функциональное питание для котов</h2>
@@ -60,6 +64,7 @@
         </div>
       </section>
 
+      <!-- Виды программ -->
       <section class="program-types">
         <div class="program-types__wrapper">
           <h2 class="visually-hidden">Виды программ</h2>
@@ -83,6 +88,51 @@
             </p>
             <a class="program-type__link" href="#">каталог pro</a>
           </div>
+        </div>
+      </section>
+
+      <!-- Преимущества -->
+      <section class="advantages">
+        <div class="advantages__wrapper">
+          <h2 class="advantages__title title">Как это работает</h2>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <div
+                class="advantages__icon-container advantages__icon-container--leaf"
+              ></div>
+              <p class="advantages__text">
+                Функциональное питание содержит только полезные питательные
+                вещества.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <div
+                class="advantages__icon-container advantages__icon-container--powder"
+              ></div>
+              <p class="advantages__text">
+                Выпускается в виде порошка, который нужно лишь залить кипятком и
+                готово.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <div
+                class="advantages__icon-container advantages__icon-container--cutlery"
+              ></div>
+              <p class="advantages__text">
+                Замените один-два приема обычной еды на наше функциональное
+                питание.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <div
+                class="advantages__icon-container advantages__icon-container--watch"
+              ></div>
+              <p class="advantages__text">
+                Уже через месяц наслаждайтесь изменениями к лучшему вашего
+                питомца!
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
