Сделал разметку живого примера

--- a/src/index.html
+++ b/src/index.html
@@ -31,15 +31,15 @@
 
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
-            <li class="site-list__item site-list__item--current">
+            <li class="site__item site__item--current">
               <a class="site-list__link" href="index.html">Главная</a>
             </li>
-            <li class="site-list__item">
+            <li class="site__item">
               <a class="site-list__link" href="catalog.html"
                 >Каталог продукции</a
               >
             </li>
-            <li class="site-list__item">
+            <li class="site__item">
               <a class="site-list__link" href="form.html">Подбор программы</a>
             </li>
           </ul>
@@ -133,6 +133,49 @@
               </p>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <!-- Живой пример -->
+      <section class="example">
+        <div class="example__wrapper">
+          <h2 class="example__title title">Живой пример</h2>
+          <p class="example__description">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
+            Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
+            этом он не менял своих привычек и по-прежнему спит по 16 часов в
+            день.
+          </p>
+          <dl class="example__list">
+            <div class="example__item">
+              <dt class="example__heading">5 кг</dt>
+              <dd class="example__description">снижение веса</dd>
+            </div>
+            <div class="example__item">
+              <dt class="example__heading">60 дней</dt>
+              <dd class="example__description">затрачено времени</dd>
+            </div>
+          </dl>
+          <div class="example__result">
+            <p class="example__expenses">Затраты на питание:</p>
+            <div class="example__price">15 000 руб.</div>
+          </div>
+          <div class="example__cat cat-result">
+            <img
+              class="cat-result__image"
+              src="./img/before-mobile.png"
+              width="280"
+              height="256"
+              alt="Кот до похудения"
+            />
+            <img
+              class="cat-result__image"
+              src="./img/after-mobile.png"
+              width="280"
+              height="256"
+              alt="Кот после похудения"
+            />
+          </div>
         </div>
       </section>
     </main>
