Добавил верстку подвала

--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,15 @@
           src="./img/logo-cat-energy-icon-mobile.svg"
           width="33"
           height="38"
+          alt="иконка кэт энерджи"
         />
       </a>
-      <div class="main-header__name-logo">
+      <div class="main-header__name-logo logo">
         <img
           src="./img/logo-cat-energy-name-mobile.svg"
           width="101"
           height="18"
+          alt="Кэт энерджи"
         />
       </div>
 
@@ -198,5 +200,56 @@
         </div>
       </section>
     </main>
+
+    <!-- Подвал -->
+    <footer class="main-footer">
+      <div class="main-footer__logo logo-cat-energy">
+        <a class="logo-cat-energy__image" href="index.html">
+          <img
+            src="./img/logo-cat-energy-name-mobile.svg"
+            width="128"
+            height="24"
+            alt="Кэт энерджи"
+          />
+        </a>
+      </div>
+      <div class="main-footer__social social">
+        <ul class="social-list">
+          <li class="social__item">
+            <a
+              class="social__link social__link--vkontakte"
+              href="https://vk.com/htmlacademy"
+              >Вконтакте</a
+            >
+          </li>
+          <li class="social__item">
+            <a
+              class="social__link social__link--youtube"
+              href="https://www.youtube.com/user/htmlacademyru"
+              >Ютуб</a
+            >
+          </li>
+          <li class="social__item">
+            <a
+              class="social__link social__link--telegram"
+              href="https://t.me/htmlacademy"
+              >Телеграм</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="main-footer__copyright copyright">
+        <a class="copyright__link" href="#">
+          <span class="copyright__link-html-academy">HTML Academy</span>
+          <img
+            class="copyright__html-academy-icon"
+            src="./img/html-academy-mobile.svg"
+            width="27"
+            height="34"
+            alt="Логотип html academy"
+          />
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
