--- a/src/index.html
+++ b/src/index.html
@@ -203,6 +203,7 @@
 
     <!-- Подвал -->
     <footer class="main-footer">
+      <!-- логотип кэт энереджи -->
       <div class="main-footer__logo logo-cat-energy">
         <a class="logo-cat-energy__image" href="index.html">
           <img
@@ -213,6 +214,8 @@
           />
         </a>
       </div>
+
+      <!-- соц. сети -->
       <div class="main-footer__social social">
         <ul class="social-list">
           <li class="social__item">
@@ -238,6 +241,8 @@
           </li>
         </ul>
       </div>
+
+      <!-- авторские права -->
       <div class="main-footer__copyright copyright">
         <a class="copyright__link" href="#">
           <span class="copyright__link-html-academy">HTML Academy</span>
